crates/tui/tests/snapshots/snapshots__launch_running.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&mut h.app, 110, 26)"
---
" omp-tui  1 Favorites (0)   2 Internet (3)   3 Partners (1)   4 Recent (1)    / search  ● game running        "
"┌ Internet ──────────────────────────────────────────────────────────┐┌ Players (3) ─────────────────────────┐"
"│  se┌ Launching Alpha Freeroam (127.0.0.1:7001) ───────────────────────────────────────────────────────┐core│"
"│▶   │joining as Carl_Johnson with SA-MP 0.3.7-R5 + open.mp                                             │ 123│"
"│    │game process started (pid 1234)                                                                   │  69│"
"│    │injected samp.dll                                                                                 │ 420│"
"│    │retrying omp-client.dll (attempt 1): Access denied (code 5)                                       │    │"
"│    │injected omp-client.dll (attempt 2)                                                               │    │"
"│    │game resumed                                                                                      │    │"
"│    │Esc hide (the game keeps running)   c clear                                                       │    │"
"│    │                                                                                                  │    │"
"│    │                                                                                                  │    │"
"│    │                                                                                                  │    │"
"│    │                                                                                                  │    │"
"└────│                                                                                                  │────┘"
"┌ Det│                                                                                                  │────┐"
"│Alph│                                                                                                  │    │"
"│mode│                                                                                                  │    │"
"│lang│                                                                                                  │    │"
"│play│                                                                                                  │    │"
"│vers│                                                                                                  │    │"
"│ping│                                                                                                  │    │"
"│webs│                                                                                                  │    │"
"│disc└──────────────────────────────────────────────────────────────────────────────────────────────────┘    │"
"└────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────┘"
" game resumed                                                                                                 "
