crates/tui/tests/snapshots/snapshots__main_view_narrow.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&mut h.app, 80, 24)"
---
" omp-tui  1 Favorites (0)   2 Internet (3)   3 Partners (1)   4 Recent (0)    / "
"┌ Internet ──────────────────────────────────────────┐┌ Players (3) ───────────┐"
"│  server                          players    ping   ││name               score│"
"│▶   ◆ Alpha Freeroam               12/100    45ms   ││johnny               123│"
"│    ○ Bravo Roleplay                0/100     --- 🔒││bigsmoke              69│" Hidden by multi-width symbols: [(52, " ")]
"│    ◆ Charlie Deathmatch           55/100   120ms   ││ryder                420│"
"│                                                    ││                        │"
"│                                                    ││                        │"
"│                                                    ││                        │"
"│                                                    ││                        │"
"│                                                    ││                        │"
"│                                                    ││                        │"
"│                                                    ││                        │"
"└─────────────────────────────────────────────── 3/3 ┘└────────────────────────┘"
"┌ Details ───────────────────────────────────────────┐┌ Ping 45ms  min 30 avg 3┐"
"│Alpha Freeroam  127.0.0.1:7001                      ││      █                 │"
"│mode      Freeroam v2                               ││      █                 │"
"│language  English                                   ││      █                 │"
"│players   12/100                                    ││      █▄                │"
"│version   omp 1.5.8.3079  (open.mp)                 ││   ▃  ██                │"
"│ping      45ms                                      ││▁ ▂█  ██                │"
"│discord   https://discord.gg/example                ││█▁██▇▃██                │"
"└────────────────────────────────────────────────────┘└────────────────────────┘"
" 3 servers loaded                                                               "
