crates/tui/tests/snapshots/snapshots__message_error.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&mut h.app, 100, 20)"
---
" omp-tui  1 Favorites (0)   2 Internet (0)   3 Partners (0)   4 Recent (0)    / search              "
"┌ Internet ───────────────────────────────────────────────────────┐┌ Players ──────────────────────┐"
"│           master list unavailable: connection refused           ││                               │"
"│                        press r to retry                         ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                ┌ Import client files ───────────┐│                               │"
"│                                │nope is not a directory         ││                               │"
"│                                │                                ││                               │"
"│                                │Esc / Enter close               ││                               │"
"└────────────────────────────────└────────────────────────────────┘└───────────────────────────────┘"
"┌ Details ────────────────────────────────────────────────────────┐┌ Ping ─────────────────────────┐"
"│select a server                                                  ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"└─────────────────────────────────────────────────────────────────┘└───────────────────────────────┘"
" master list unavailable: connection refused                                                        "
