crates/tui/tests/snapshots/snapshots__recent_after_launch.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&mut h.app, 110, 20)"
---
" omp-tui  1 Favorites (0)   2 Internet (3)   3 Partners (1)   4 Recent (1)    / search                        "
"┌ Recently joined ───────────────────────────────────────────────────┐┌ Players (0) ─────────────────────────┐"
"│  server                                          players    ping   ││player list not available             │"
"│▶   ◆ Alpha Freeroam                               12/100       …   ││(servers stop answering above ~100    │"
"│                                                                    ││players)                              │"
"│                                                                    ││                                      │"
"│                                                                    ││                                      │"
"│                                                                    ││                                      │"
"│                                                                    ││                                      │"
"│                                                                    ││                                      │"
"│                                                                    ││                                      │"
"└─────────────────────────────────────────────────────────────── 1/1 ┘└──────────────────────────────────────┘"
"┌ Details ───────────────────────────────────────────────────────────┐┌ Ping 45ms  min 30 avg 38 max 60 ─────┐"
"│Alpha Freeroam  127.0.0.1:7001                                      ││      █                               │"
"│mode      Freeroam v2                                               ││      █                               │"
"│language  English                                                   ││      █▄                              │"
"│players   12/100                                                    ││   ▆  ██                              │"
"│version   omp 1.5.8.3079  (open.mp)                                 ││▆▁▇█▅▂██                              │"
"└────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────┘"
" helper finished                                                                                              "
