crates/tui/tests/snapshots/snapshots__recent_empty.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&mut h.app, 100, 20)"
---
" omp-tui  1 Favorites (0)   2 Internet (3)   3 Partners (1)   4 Recent (0)    / search              "
"┌ Recently joined ────────────────────────────────────────────────┐┌ Players ──────────────────────┐"
"│                   no recently joined servers                    ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"└──────────────────────────────────────────────────────────── 0/0 ┘└───────────────────────────────┘"
"┌ Details ────────────────────────────────────────────────────────┐┌ Ping ─────────────────────────┐"
"│select a server                                                  ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"│                                                                 ││                               │"
"└─────────────────────────────────────────────────────────────────┘└───────────────────────────────┘"
" 3 servers loaded                                                                                   "
