crates/tui/tests/snapshots/snapshots__settings.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&mut h.app, 110, 32)"
---
" omp-tui  1 Favorites (0)   2 Internet (3)   3 Partners (1)   4 Recent (0)    / search                        "
"┌ Internet ──────────────────────────────────────────────────────────┐┌ Players (3) ─────────────────────────┐"
"│  serv┌ Settings ────────────────────────────────────────────────────────────────────────────────────┐ score│"
"│▶   ◆ │ Nickname                                                                                     │   123│"
"│    ○ │ Game folder                                                                                  │    69│"
"│    ◆ │ Game executable                       gta_sa.exe                                             │   420│"
"│      │ SA-MP client version                  0.3.7-R5                                               │      │"
"│      │ Inject open.mp client                 on                                                     │      │"
"│      │ Wine binary                           /opt/wine/bin/wine                                     │      │"
"│      │ Wine prefix                           /home/user/.local/share/omp-tui/prefix                 │      │"
"│      │ Extra environment (K=V ...)                                                                  │      │"
"│      │ Start game suspended, inject, resume  on                                                     │      │"
"│      │ Quit after launching                  off                                                    │      │"
"│      │ Query servers in lists (ping/players) off                                                    │      │"
"│      │ Reload the master list every          off                                                    │      │"
"│      │ Check for a new release at start      on                                                     │      │"
"│      │ Terminal for desktop entries          foot                                                   │      │"
"│      │                                                                                              │      │"
"└──────│ ▶ Check client files and game                                                                │──────┘"
"┌ Detai│ ▶ Download client files from open.mp                                                         │ ─────┐"
"│Alpha │ ▶ Import client files from a launcher data folder…                                           │      │"
"│mode  │ ▶ Auto-detect Wine, prefix, game and client files                                            │      │"
"│langua│ ▶ Create / update the Wine prefix (wineboot)                                                 │      │"
"│player│ ▶ Install d3dx9 into the prefix (winetricks)                                                 │      │"
"│versio│ ▶ Import SA-MP favorites (USERDATA.DAT)…                                                     │      │"
"│ping  │ ▶ Install desktop entry + omp:// handler                                                     │      │"
"│websit│Enter edit/toggle/run  ←/→ cycle  Esc close (settings are saved immediately)                  │      │"
"│discor│                                                                                              │      │"
"│rules └──────────────────────────────────────────────────────────────────────────────────────────────┘      │"
"│                                                                    ││█▂███▅██                              │"
"└────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────┘"
" 3 servers loaded                                                                                             "
