crates/tui/tests/snapshots/snapshots__settings_long_edit.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&mut h.app, 100, 32)"
---
" omp-tui  1 Favorites (0)   2 Internet (3)   3 Partners (1)   4 Recent (0)    / search              "
"┌ Internet ───────────────────────────────────────────────────────┐┌ Players (3) ──────────────────┐"
"│ ┌ Settings ────────────────────────────────────────────────────────────────────────────────────┐e│"
"│▶│ Nickname                                                                                     │3│"
"│ │ Game folder                                                                                  │9│"
"│ │ Game executable                       gta_sa.exe                                             │0│"
"│ │ SA-MP client version                  0.3.7-R5                                               │ │"
"│ │ Inject open.mp client                 on                                                     │ │"
"│ │ Wine binary                           ▏…mpatibilitytools.d/proton-cachyos-slr/files/bin/wine │ │"
"│ │ Wine prefix                           /home/user/.local/share/omp-tui/prefix                 │ │"
"│ │ Extra environment (K=V ...)                                                                  │ │"
"│ │ Start game suspended, inject, resume  on                                                     │ │"
"│ │ Quit after launching                  off                                                    │ │"
"│ │ Query servers in lists (ping/players) off                                                    │ │"
"│ │ Reload the master list every          off                                                    │ │"
"│ │ Check for a new release at start      on                                                     │ │"
"│ │ Terminal for desktop entries          foot                                                   │ │"
"│ │                                                                                              │ │"
"└─│ ▶ Check client files and game                                                                │─┘"
"┌ │ ▶ Download client files from open.mp                                                         │6┐"
"│A│ ▶ Import client files from a launcher data folder…                                           │ │"
"│m│ ▶ Auto-detect Wine, prefix, game and client files                                            │ │"
"│l│ ▶ Create / update the Wine prefix (wineboot)                                                 │ │"
"│p│ ▶ Install d3dx9 into the prefix (winetricks)                                                 │ │"
"│v│ ▶ Import SA-MP favorites (USERDATA.DAT)…                                                     │ │"
"│p│ ▶ Install desktop entry + omp:// handler                                                     │ │"
"│w│Enter save  Esc cancel edit                                                                   │ │"
"│d│                                                                                              │ │"
"│r└──────────────────────────────────────────────────────────────────────────────────────────────┘ │"
"│                                                                 ││█▂███▅██                       │"
"└─────────────────────────────────────────────────────────────────┘└───────────────────────────────┘"
" 3 servers loaded                                                                                   "
